--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/net.sf.py4j/py4j
+    compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.8.1'
+    compile group: 'org.python', name: 'jython-standalone', version: '2.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha-2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.3.0.201903130848-r'
