--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
+    }
+}
+
 plugins {
+    id 'idea'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    id "com.google.protobuf" version "0.8.8"
 }
 
 group 'se.iimetra'
@@ -12,7 +23,53 @@ repositories {
     mavenCentral()
 }
 
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.6.1"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.19.0'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
+}
+
+//sourceSets {
+//    main {
+//        proto {
+//            // In addition to the default 'src/main/proto'
+//            srcDir 'proto'
+//            // In addition to the default '**/*.proto' (use with caution).
+//            // Using an extension other than 'proto' is NOT recommended,
+//            // because when proto files are published along with class files, we can
+//            // only tell the type of a file from its extension.
+//            include '**/*.protodevel'
+//        }
+//    }
+//
+//}
+
+sourceSets.main.java.srcDir new File(buildDir, 'generated/source/proto/main/grpc')
+sourceSets.main.java.srcDir new File(buildDir, 'generated/source/proto/main/java')
+idea {
+    module {
+        // Marks the already(!) added srcDir as "generated"
+        generatedSourceDirs += file('generated/source/proto/main/grpc')
+        generatedSourceDirs += file('generated/source/proto/main/java')
+    }
+}
+
 dependencies {
+
+    compile 'io.grpc:grpc-netty-shaded:1.19.0'
+    compile 'io.grpc:grpc-protobuf:1.19.0'
+    compile 'io.grpc:grpc-stub:1.19.0'
+
     // https://mvnrepository.com/artifact/net.sf.py4j/py4j
     compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.8.1'
     compile group: 'org.python', name: 'jython-standalone', version: '2.7.1'
