--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     compile 'io.grpc:grpc-protobuf:1.19.0'
     compile 'io.grpc:grpc-stub:1.19.0'
 
+    compile('com.google.protobuf:protobuf-java:3.6.1')
+    compile('com.google.protobuf:protobuf-java-util:3.6.1')
+
     // https://mvnrepository.com/artifact/net.sf.py4j/py4j
     compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.8.1'
     compile group: 'org.python', name: 'jython-standalone', version: '2.7.1'
