--- a/build.gradle
+++ b/build.gradle
@@ -1,91 +1,35 @@
+group 'cyber'
+version '1-SNAPSHOT'
+
 buildscript {
+
+    ext {
+        kotlin_version = '1.3.11'
+        serialization_version = '0.9.0'
+        spring_boot_version = "2.1.1.RELEASE"
+    }
+
     repositories {
+        maven { url 'https://maven.google.com' }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
-plugins {
-    id 'idea'
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.11'
-    id "com.google.protobuf" version "0.8.8"
-}
 
-group 'se.iimetra'
-version '1.0-SNAPSHOT'
+subprojects {
+    apply plugin: 'kotlinx-serialization'
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:3.6.1"
-    }
-    plugins {
-        grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.19.0'
-        }
-    }
-    generateProtoTasks {
-        all()*.plugins {
-            grpc {}
-        }
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url 'https://maven.google.com' }
     }
 }
 
-//sourceSets {
-//    main {
-//        proto {
-//            // In addition to the default 'src/main/proto'
-//            srcDir 'proto'
-//            // In addition to the default '**/*.proto' (use with caution).
-//            // Using an extension other than 'proto' is NOT recommended,
-//            // because when proto files are published along with class files, we can
-//            // only tell the type of a file from its extension.
-//            include '**/*.protodevel'
-//        }
-//    }
-//
-//}
-
-sourceSets.main.java.srcDir new File(buildDir, 'generated/source/proto/main/grpc')
-sourceSets.main.java.srcDir new File(buildDir, 'generated/source/proto/main/java')
-idea {
-    module {
-        // Marks the already(!) added srcDir as "generated"
-        generatedSourceDirs += file('generated/source/proto/main/grpc')
-        generatedSourceDirs += file('generated/source/proto/main/java')
-    }
-}
-
-dependencies {
-
-    compile 'io.grpc:grpc-netty-shaded:1.19.0'
-    compile 'io.grpc:grpc-protobuf:1.19.0'
-    compile 'io.grpc:grpc-stub:1.19.0'
-
-    compile('com.google.protobuf:protobuf-java:3.6.1')
-    compile('com.google.protobuf:protobuf-java-util:3.6.1')
-
-    // https://mvnrepository.com/artifact/net.sf.py4j/py4j
-    compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.8.1'
-    compile group: 'org.python', name: 'jython-standalone', version: '2.7.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha-2'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.3.0.201903130848-r'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
