--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,9 +1,15 @@
 buildscript {
+
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${spring_boot_version}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlin_version}")
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
+    }
+
     repositories {
         mavenCentral()
-    }
-    dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
     }
 }
 
@@ -12,6 +18,8 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm'
     id "com.google.protobuf" version "0.8.8"
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.3.21"
+    id "org.jetbrains.kotlin.plugin.spring" version "1.3.21"
 }
 
 group 'se.iimetra'
@@ -50,6 +58,10 @@ idea {
 }
 
 dependencies {
+    compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
+
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: "$spring_boot_version"
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8'
 
     compile 'io.grpc:grpc-netty-shaded:1.19.0'
     compile 'io.grpc:grpc-protobuf:1.19.0'
