--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "react-router-dom": "^4.2.2",
     "react-tippy": "^1.2.2",
     "react-bootstrap": "0.32.4",
-    "storm-react-diagrams": "^5.0.0"
+    "storm-react-diagrams": "^5.0.0",
+    "react-tabs": "^3.0.0"
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
