--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "react-tippy": "^1.2.2",
     "react-bootstrap": "0.32.4",
     "storm-react-diagrams": "^5.0.0",
-    "react-tabs": "^3.0.0"
+    "react-tabs": "^3.0.0",
+    "devextreme": "^18.2.7",
+    "devextreme-react": "^18.2.7"
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.6",
+    "url-loader": "^1.1.2",
     "node-sass": "^4.7.2",
     "node-watch": "0.5.5",
     "npm-run": "^4.1.2",
