--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -22,6 +22,8 @@ plugins {
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.21"
 }
 
+apply plugin: 'kotlin-platform-jvm'
+
 group 'se.iimetra'
 version '1.0-SNAPSHOT'
 
@@ -77,6 +79,7 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.3.0.201903130848-r'
+    expectedBy project(":common")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
