--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.8.1'
     compile group: 'org.python', name: 'jython-standalone', version: '2.7.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha-2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.2.0-alpha-2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.3.0.201903130848-r'
