--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "svgjs": "^2.6.2",
     "svg-text": "^0.5.1",
     "@loadable/component": "^5.7.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
