--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -69,12 +69,10 @@ idea {
 
 dependencies {
     compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
-    //compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "$spring_boot_version"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: "$spring_boot_version"
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8'
-// https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx.html.jvm
-// https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx.html.jvm
-// https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-html-jvm
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb:$spring_boot_version")
+
     compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-html-jvm', version: 'latest-1.3.40-dev-2406-1959'
 
     compile 'io.grpc:grpc-netty-shaded:1.19.0'
@@ -84,14 +82,8 @@ dependencies {
     compile('com.google.protobuf:protobuf-java:3.6.1')
     compile('com.google.protobuf:protobuf-java-util:3.6.1')
 
-    //compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
 
-// https://mvnrepository.com/artifact/org.springframework/spring-webmvc
-  //  compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.6.RELEASE'
-
-    // https://mvnrepository.com/artifact/net.sf.py4j/py4j
     compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.8.1'
     compile group: 'org.python', name: 'jython-standalone', version: '2.7.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha-2'
